2010-05-09  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use add_depend_package.

2009-06-02  Detlef Reichl  <detlef.reichl@gmx.org>

	* src/rbbonobo-main.c: use $0 instead of rb_argv0.

2009-03-21  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbbonobo-main.c: move Bonobo.setup_x_error_handler to
	Ruby/BonoboUI2.
	Reported by id:luna_8bit. Thanks!!!

2009-01-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbbonobo-main.c: use rb_argv0 instead of rb_progname.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbbonobo.c (Init_bonobo2): just define Bonobo::Object.

2004-10-17  Vincent Isambart <isambart@netcourrier.com>

	* extconf.rb: Replaced "$objs <<" with add_obj.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Exit with 1 when the package is not found.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-03-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: cygwin support

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2002-12-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* Initial import. 
