@@ -1,3 +1,7 @@
+2010-09-23  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb: follow Ruby/GLib2 directory structure change.
+
 2010-05-09  Kouhei Sutou  <kou@cozmixng.org>
 
 	* extconf.rb: use add_depend_package.
